# OSPFlagging

./: .gitignore  create-volumes.bat  create-volumes.sh  docker-compose.yml  pyproject.toml  requirements.txt
.run/: Development Environment (With DockerClient).run.xml  Development Environment.run.xml  pytest in integration_tests.run.xml  pytest in tests.run.xml
flagging/src/: FlagFeederApp.py  VariableInformation.py
flagging/tests/: test_FlagFeederApp.py  test_VariableInformation.py
flagging_project/: app.py
flagging_project/api_service/: FlaggingService.py  __init__.py  app.py
flagging_project/flag_data/: FlaggingColumnNames.py  FlaggingDAO.py  FlaggingDOA.py  FlaggingMongo.py  flagging_database.py
flagging_project/flag_feeders/: FlagFeederService.py  flag_feeder_service.py
flagging_project/flag_names/: FlagGroupService.py  FlagService.py
flagging_project/flagging/: ErrorInformation.py  FlagErrorInformation.py  FlagFeederApp.py  FlagLogicInformation.py  FlaggingMyPy.py  FlaggingNodeVisitor.py  FlaggingValidation.py  FlaggingValidationMyPy.py  ModuleInformation.py  TypeValidationResults.py  VariableInformation.py  flagging_validation.py
flagging_project/front_end/: FlaggingDependencies.py  FlaggingSchemaInformation.py  FlaggingSchemaService.py  FlaggingValidateLogic.py  FlagingSchemaInformation.py  ReferencedFlag.py  TransferFlagLogicInformation.py  TransferFlaggingValidationResults.py
flagging_project/handlers/: FlaggingAPI.py  routes.py
flagging_project/integration_tests/: __init__.py  test_FlaggingAPI_Integration.py  (+3 more)
poetry-demo/: pyproject.toml
(+13 files in other folders)
