[tool.poetry]
name = "ospflagging"
version = "0.1.0"
description = ""
authors = ["Adam Kinnear <akinnear@gmail.com>"]
packages = [
    { include = "flagging_project" },
]

[tool.poetry.dependencies]
python = "^3.8.3"
mypy = "^0.782"
mock = "^4.0.2"
setuptools = "^49.6.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
