[tool.poetry]
name = "ospflagging"
version = "0.1.0"
description = ""
authors = ["Adam Kinnear <akinnear@gmail.com>"]
packages = [
    { include = "flagging_project" },
]

[tool.poetry.dependencies]
python = "^3.8.3"
mypy = "^0.782"
setuptools = "^49.6.0"
stdlib_list = "^0.7.0"
pymongo = "^3.11.0"
datetime = "^4.3"
mongomock = "^3.20.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
numpy = "^1.19.1"
pandas = "^1.1.1"
mock = "^4.0.2"
testcontainers = "^3.1.0"
flask_pymongo = "^2.3.0"
random_object_id = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
